fix: harden auth settings and upload boundaries